# autotools-test

./: README.md
math-factorial-app/: Makefile.am  configure.ac
math-factorial-app/m4/: ax_math_factorial.m4
math-factorial-lib/: Makefile.am  build.sh  configure.ac
math-factorial-lib/debian/: control.in  emerge.sh.in
